--- a/references.bib
+++ b/references.bib
@@ -2447,3 +2447,16 @@ doi = {10.1201/9781420072884-c30}
   pages={7},
   year={2002}
 }
+
+@Article{pebesma2018sf,
+  author = {Edzer Pebesma},
+  title = {{Simple Features for R: Standardized Support for Spatial
+    Vector Data}},
+  year = {2018},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2018-009},
+  url = {https://doi.org/10.32614/RJ-2018-009},
+  pages = {439--446},
+  volume = {10},
+  number = {1},
+}
